few apis with DB connection
